# FirmFlake

./: .gitignore  .gitmodules  README.md  SourceZephyr.sh
.github/workflows/: build_and_test_common_libs.yaml
Arduino/arm_joystick_panel/: arm_joystick_panel.ino
arduino_firmware/arm_joystick_panel/: arm_joystick_panel.ino
arduino_firmware/general_left_0/: general_left_0.ino
arduino_firmware/mini_rover/Mini_Rover_Firmware_ESP32_FreeRTOS/: Mini_Rover_Firmware_ESP32_FreeRTOS.ino
common_libraries/: CMakeLists.txt  Makefile
common_libraries/crc/inc/: crc.h
common_libraries/example/: some_lib.cpp  some_lib.h
common_libraries/example/test/: test_some_lib.cpp
common_libraries/low_pass_fir_filter/: README.md  low_pass_fir_filter.cpp  low_pass_fir_filter.h  low_pass_fir_filter.hpp
common_libraries/low_pass_fir_filter/test/: test_low_pass_fir_filter.cpp
ros2_tests/install/: local_setup.sh  setup.sh
ros2_tests/src/firmware_tests/: CMakeLists.txt
samples-and-testing/hello_world/: prj.conf
samples-and-testing/hello_world/src/: main.cpp
zephyr-projects/arm_firmware_teensy41/: CMakeLists.txt  app.overlay  ideas  load_hex.sh  prj.conf  readme.md  teensy.overlay  weird_errors
zephyr-projects/arm_firmware_teensy41/include/: Axis.h  armFirmware.h
zephyr-projects/esp_cbs/: CMakeLists.txt  prj.conf
zephyr-projects/esp_cbs/src/: main.c
zephyr-projects/motor_control_attempt/: CMakeLists.txt  prj.conf
zephyr_projects/arm_firmware_teensy41/: load_hex.sh  weird_errors
zephyr_projects/esp_cbs/: app.overlay
zephyr_projects/network_ags_esp32/: prj.conf
(+20 files in other folders)
